# aries-rfcs

./: .gitignore  0000-template-protocol.md  0000-template.md  MAINTAINERS.md  README.md  aipchanges.txt  aipchangesSummary.txt  contributing.md  foo.txt  github-issues.md  index.md  mkdocs-requirements.txt  mkdocs.yml  tags.md
.circleci/: config.yml  requirements.txt
.github/: dependabot.yml
.github/workflows/: indexgenerate.yml  main.yml  publish-site.yml
code/: aipUpdates.py  check_links.py  cpAIPs.sh  genSite.sh  generate_index.py  generate_mkdocs_index.py  link_tags.py  revise_metadata.py  rfcs.py  test_index.py  test_rfcs.py
collateral/: Hyperledger_Aries_Logo_Black.eps  Hyperledger_Aries_Logo_Color.eps  Hyperledger_Aries_Logo_White.eps  lifecycle-wordart.docx
concepts/0003-protocols/: README.md  instructions.md  parties-roles-participants.md  roles-participants-etc.md  semver.md  state-details.md  template.md  uris.md
concepts/0004-agents/: README.md
concepts/0005-didcomm/: README.md
concepts/0006-ssi-notation/: README.md
concepts/0008-message-id-and-threading/: README.md
concepts/0011-decorators/: README.md
concepts/0013-overlays/: README.md
concepts/0014-acks/: README.md
concepts/0015-acks/: README.md  (+2 more)
features/0042-lox/reference_code/lox/: Cargo.toml
features/0042-lox/reference_code/lox-cli/: Cargo.toml
features/0042-lox/reference_code/lox-cli/src/: main.rs
features/0042-lox/reference_code/lox/src/: lib.rs
features/0042-lox/reference_code/lox/src/keyring/: linux.rs  macos.rs  mod.rs  windows.rs
main/: 404.html  index.html
(+559 files in other folders)
