[package]
name = "lox"
version = "0.2.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
rand = "0.7.0"
zeroize = "0.9.3"
whoami = "0.5.3"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
users = "0.9.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "0.3.1"
security-framework-sys = "0.3.1"
core-foundation = "0.6.4"
core-foundation-sys = "0.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "1.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.7", features = ["dpapi", "wincred", "winerror"] }
byteorder = "1.3.2"

